@@ -39,10 +39,9 @@ if (project.hasProperty("distCommon4jVersion") && project.distCommon4jVersion !=
 boolean newBrokerDiscoveryEnabledFlag = project.hasProperty("newBrokerDiscoveryEnabledFlag")
 
 android {
-
-    compileSdkVersion rootProject.ext.compileSdkVersion
-
+    compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
+        namespace 'com.microsoft.identity.common'
         multiDexEnabled true
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -217,15 +216,15 @@ android.libraryVariants.all { variant ->
 // Create tasks to generate javadoc jar
 android.libraryVariants.all { variant ->
     task("${variant.name}JavadocJar", type: Jar, dependsOn: "${variant.name}Javadoc") {
-        classifier = 'javadoc'
+        classifier 'javadoc'
         from tasks["${variant.name}Javadoc"].destinationDir
     }
 }
 
 
-task sourcesJar(type: Jar) {
+tasks.register('sourcesJar', Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    classifier 'sources'
     destinationDirectory = reporting.file("$project.buildDir/outputs/jar/")
 }
 
@@ -237,7 +236,7 @@ checkstyle {
     reportsDir = file("$project.buildDir/outputs/")
 }
 
-task checkstyle(type: Checkstyle) {
+tasks.register('checkstyle', Checkstyle) {
     configFile file("${project.rootDir}/config/checkstyle/checkstyle.xml")
 
     configProperties.checkstyleConfigDir = checkstyleConfigDir
@@ -253,7 +252,7 @@ pmd {
     reportsDir = file("$project.buildDir/outputs/")
 }
 
-task pmd(type: Pmd) {
+tasks.register('pmd', Pmd) {
     description 'Run pmd'
     group 'verification'
 
@@ -338,12 +337,15 @@ afterEvaluate {
     }
 }
 
-tasks.whenTaskAdded { task ->
+tasks.configureEach { task ->
     if (task.name.contains("assemble")) {
         task.dependsOn 'pmd'
     }
 
     if (task.name == 'assembleDebug' || task.name == 'assembleRelease') {
         task.dependsOn 'lint', 'sourcesJar', 'pmd'
+    }
+    if (task.name == 'assembleDistRelease') {
+        task.dependsOn 'sourcesJar'
     }
 }
