@@ -62,7 +62,7 @@ version = getAppVersionName()
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    classifier 'sources'
     destinationDirectory = reporting.file("$project.buildDir/outputs/jars")
 }
 
